[package]
name = "hilly-sounds"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", optional = true }
cpal = { version = "0.13", features = ["jack"] }
derive_builder = "0.11"
dsp = "0.10"
hilbert = "0.1"
hound = "3.4"
nannou = "0.18"
nannou_egui = { version = "0.5", optional = true }
num-bigint = "0.4"
opener = { version = "0.5.0", optional = true }
serde_json = { version = "1.0", optional = true }
toml = { version = "0.5", optional = true }

[dependencies.clap]
version = "3.1"
features = ["cargo", "derive"]
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[[bin]]
name = "cli"
path = "src/bin/cli/mod.rs"
required-features = ["binary", "toml"]

[features]
binary = ["dep:anyhow", "dep:clap", "dep:opener"]
egui = ["dep:nannou_egui"]
json = ["dep:serde_json"]
serde = ["dep:serde"]
toml = ["serde", "dep:toml"]